Add performance calculator to campaign visualizer
Introduces a performance calculator view to the campaign visualizer page, allowing users to forecast clicks, leads, revenue, and ROI based on campaign budgets and user input. Adds new state and UI for performance assumptions, campaign breakdown, and funnel visualization using Mermaid. Refactors OpenAI campaign plan generation logic into a separate module. Updates dependencies to include Mermaid for diagram rendering.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.86.0",
     "axios": "^1.13.2",
+    "mermaid": "^11.12.2",
     "next": "16.0.7",
     "node-console-progress-bar-tqdm": "^1.0.4",
     "openai": "^6.9.1",
