--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.946.0",
     "@supabase/supabase-js": "^2.86.0",
     "axios": "^1.13.2",
     "mermaid": "^11.12.2",
