--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.946.0",
     "@supabase/supabase-js": "^2.86.0",
+    "@tailwindcss/typography": "^0.5.19",
     "axios": "^1.13.2",
     "mermaid": "^11.12.2",
     "next": "16.0.7",
     "node-console-progress-bar-tqdm": "^1.0.4",
     "openai": "^6.9.1",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "react-markdown": "^10.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
