--- a/package.json
+++ b/package.json
@@ -10,16 +10,26 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.946.0",
+    "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slider": "^1.3.6",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@supabase/supabase-js": "^2.86.0",
     "@tailwindcss/typography": "^0.5.19",
     "axios": "^1.13.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "exceljs": "^4.4.0",
+    "lucide-react": "^0.562.0",
     "mermaid": "^11.12.2",
     "next": "16.0.7",
     "node-console-progress-bar-tqdm": "^1.0.4",
     "openai": "^6.9.1",
     "react": "19.2.1",
     "react-dom": "19.2.1",
-    "react-markdown": "^10.1.0"
+    "react-markdown": "^10.1.0",
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
