--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.946.0",
+    "@aws-sdk/client-s3": "^3.893.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-select": "^2.2.6",
@@ -20,10 +20,12 @@
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cryptography": "^1.2.3",
     "exceljs": "^4.4.0",
+    "google-ads-api": "^22.0.0",
     "lucide-react": "^0.562.0",
-    "mermaid": "^11.12.2",
-    "next": "16.0.7",
+    "mermaid": "^10.9.5",
+    "next": "^16.1.1",
     "node-console-progress-bar-tqdm": "^1.0.4",
     "openai": "^6.9.1",
     "react": "19.2.1",
@@ -36,6 +38,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "baseline-browser-mapping": "^2.9.19",
     "eslint": "^9",
     "eslint-config-next": "16.0.6",
     "tailwindcss": "^4",
